Fix file uploads on Android when Network Service is enabled

Android uses content:// URIs for file uploads, which we were not
handling in network service. This changes the code that opens the files
to open content:// URIs correctly.

Bug: 915484
Change-Id: I56f5510020cb11b5e405df2f59a7109a43e0f683
Reviewed-on: https://chromium-review.googlesource.com/c/1381111
Reviewed-by: Bo <boliu@chromium.org>
Commit-Queue: Clark DuVall <cduvall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617280}